# tic-tac-toe-master

./: .coveragerc  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
containers/poetry/: Dockerfile
github/workflows/: ci.yml
tests/: test_main.py
tic_tac_toe_master/: main.py
