[tool.poetry]
name = "tic-tac-toe-master"
version = "0.1.0"
description = ""
authors = ["ludsonfelipe <felipe_ludson@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
blue = "^0.9.1"
isort = "^5.12.0"
mkdocs = "^1.5.3"
pip-audit = "^2.6.1"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
